--- a/build_template.yml
+++ b/build_template.yml
@@ -1,5 +1,4 @@
 build_job:
   stage: build
   script:
-    - echo "Сборка проекта..."
-    - # Добавьте сюда команды сборки
+    - echo "Сборка проекта"
